Добавлено получение пользователя по username
